--- a/app/views/status_updates/index.html.erb
+++ b/app/views/status_updates/index.html.erb
@@ -26,7 +26,6 @@
 
 <br>
 
-<%= link_to 'New Status update', new_status_update_path %>
+<button class="btn" type="button"><%= link_to 'New Status update', new_status_update_path %></button>
 
-
-<%= link_to 'New User', new_user_path %>
+<button class="btn" type="button"><%= link_to 'New User', new_user_path %></button>
