--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -5,10 +5,28 @@
   <%= stylesheet_link_tag    "application", media: "all", "data-turbolinks-track" => true %>
   <%= javascript_include_tag "application", "data-turbolinks-track" => true %>
   <%= csrf_meta_tags %>
+  <link href="assets/stylesheets/bootstrap.css" rel="stylesheet" media="screen">
 </head>
 <body>
 
-<%= yield %>
+ <header class="navbar navbar-fixed-top navbar-inverse">
+  <div class="navbar-inner">
+   <div class="container">
+   	<div class="logo">
+   	 <%= MyBook %>
+   	</div>
+     <nav>
+      <ul class="nav pull-right">
+       
+      </ul>
+     </nav>
+   </div>
+  </div>
+ </header>
+
+ <div class="container">
+  <%= yield %>
+ </div>
 
 </body>
 </html>
