--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,10 +1,28 @@
 
 
-<h1>Name : <%= @users.first.name %></h1>
+<h1>
+ <p>
+  <strong>Name : <%= @users.first.name %></strong>
+ </p>
+</h1>
+
 
 <br>
-<%= image_tag @users.first.avatar %>
+   <%= image_tag @users.first.avatar %>
 <br>
+
+
+<div class="container-fluid">
+  <div class="row-fluid">
+    <div class="span4">
+      <div id="info">
+
+<h1>
+ <div>
+ <p>
+  <small id="in-h">About</small>
+ </p></div>
+</h1>
 
 <p>Education : <%= @users.first.education %></p>
 <br>
@@ -14,11 +32,21 @@
 <br>
 <p>Relationship : <%= @users.first.relationship %></p>
 
-<br>
-<%= link_to 'Edit', edit_user_path(@users.first) %>
-<br><br>
-
-<h1>Status </h1>
+<button class="btn btn-info" type="button">
+ <br>
+  <%= link_to 'Edit', edit_user_path(@users.first) %>
+ <br>
+</button>
+</div>
+    </div>
+    <div class="span8">
+      <div id="status">
+<h1>
+ <div>
+ <p>
+  <small id="st-h">Status</small>
+ </p></div>
+</h1>
 
 <% @status.each do |status_update| %>
   <%= status_update.content %>
@@ -26,6 +54,26 @@
   <br>
   <hr>
 <% end %>
-<br><br>
-<%= link_to 'New Status update', new_status_update_path %>
-<br>
+
+<button class="btn btn-info" type="button">
+ <br>
+  <%= link_to 'New Status update', new_status_update_path %>
+ <br>
+</button>
+
+</div>
+    </div>
+  </div>
+</div>
+
+
+
+
+
+
+
+
+
+
+
+
