--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,10 +1,57 @@
+<div class="dialog dialog-success">
+  <div class="container">Dialog content</div>
+</div>
+
+<ul class="nav nav-pills">
+  <li class="active">
+    <a href="#">Link</a>
+  </li>
+
+  <li>
+    <a href="#">Link</a>
+  </li>
+</ul>
+
+<div class="iconbar iconbar-success">
+  <ul>
+              <li><a href="#fakelink" class="fui-user"></a></li>
+              <li class="active"><a href="#fakelink" class="fui-calendar"></a></li>
+              <li><a href="#fakelink" class="fui-chat"></a></li>
+              <li><a href="#fakelink" class="fui-mail"></a></li>
+              <li>
+                <a href="#fakelink" class="fui-gear">
+                  <span class="iconbar-unread">1</span>
+                </a>
+              </li>
+            </ul>
+</div>
+
+<div class="container">
+      <div class="demo-row demo-buttons">
+        <div class="demo-title">
+          <h3 class="demo-panel-title">Button States</h3>
+        </div>
+
+        <div class="demo-col">
+          <a href="#fakelink" class="btn btn-large btn-block btn-primary">Primary Button</a>
+          <a href="#fakelink" class="btn btn-large btn-block btn-warning">Warning Button</a>
+          <a href="#fakelink" class="btn btn-large btn-block">Default Button</a>
+          <a href="#fakelink" class="btn btn-large btn-block btn-danger">Danger Button</a>
+        </div>
+
+        <div class="demo-col">
+          <a href="#fakelink" class="btn btn-large btn-block btn-success">Success Button</a>
+          <a href="#fakelink" class="btn btn-large btn-block btn-inverse">Inverse Button</a>
+          <a href="#fakelink" class="btn btn-large btn-block btn-info">Info Button</a>
+          <a href="#fakelink" class="btn btn-large btn-block disabled">Disabled Button</a>
+        </div>
+      </div> <!-- /row -->
+      </div></div>
 
 
-<h1>
- <p>
-  <strong>Name : <%= @users.first.name %></strong>
- </p>
-</h1>
+
+
+<h1>Name : <%= @users.first.name %></h1>
 
 
 <br>
