--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,75 +1,26 @@
-<div class="dialog dialog-success">
-  <div class="container">Dialog content</div>
-</div>
-
-<ul class="nav nav-pills">
-  <li class="active">
-    <a href="#">Link</a>
-  </li>
-
-  <li>
-    <a href="#">Link</a>
-  </li>
-</ul>
-
-<div class="iconbar iconbar-success">
-  <ul>
-              <li><a href="#fakelink" class="fui-user"></a></li>
-              <li class="active"><a href="#fakelink" class="fui-calendar"></a></li>
-              <li><a href="#fakelink" class="fui-chat"></a></li>
-              <li><a href="#fakelink" class="fui-mail"></a></li>
-              <li>
-                <a href="#fakelink" class="fui-gear">
-                  <span class="iconbar-unread">1</span>
-                </a>
-              </li>
-            </ul>
-</div>
-
-<div class="container">
-      <div class="demo-row demo-buttons">
-        <div class="demo-title">
-          <h3 class="demo-panel-title">Button States</h3>
-        </div>
-
-        <div class="demo-col">
-          <a href="#fakelink" class="btn btn-large btn-block btn-primary">Primary Button</a>
-          <a href="#fakelink" class="btn btn-large btn-block btn-warning">Warning Button</a>
-          <a href="#fakelink" class="btn btn-large btn-block">Default Button</a>
-          <a href="#fakelink" class="btn btn-large btn-block btn-danger">Danger Button</a>
-        </div>
-
-        <div class="demo-col">
-          <a href="#fakelink" class="btn btn-large btn-block btn-success">Success Button</a>
-          <a href="#fakelink" class="btn btn-large btn-block btn-inverse">Inverse Button</a>
-          <a href="#fakelink" class="btn btn-large btn-block btn-info">Info Button</a>
-          <a href="#fakelink" class="btn btn-large btn-block disabled">Disabled Button</a>
-        </div>
-      </div> <!-- /row -->
-      </div></div>
-
-
-
-
-<h1>Name : <%= @users.first.name %></h1>
-
-
 <br>
-   <%= image_tag @users.first.avatar %>
-<br>
+  <h1 class="text-center">
+    <%= @users.first.name %>
+  </h1>
+<br><br>
 
 
 <div class="container-fluid">
   <div class="row-fluid">
-    <div class="span4">
-      <div id="info">
+    <div class="span5">
+      
+<br>
+<div class="text-center">
+<%= image_tag @users.first.avatar %>
+</div>
+<br>
 
-<h1>
- <div>
- <p>
-  <small id="in-h">About</small>
- </p></div>
-</h1>
+  <h3 class="text-center">
+    <div>
+      About
+    </div>
+  </h3>
+  <br>
 
 <p>Education : <%= @users.first.education %></p>
 <br>
@@ -79,48 +30,30 @@
 <br>
 <p>Relationship : <%= @users.first.relationship %></p>
 
-<button class="btn btn-info" type="button">
- <br>
-  <%= link_to 'Edit', edit_user_path(@users.first) %>
- <br>
-</button>
-</div>
-    </div>
-    <div class="span8">
-      <div id="status">
-<h1>
- <div>
- <p>
-  <small id="st-h">Status</small>
- </p></div>
-</h1>
+<br>
+<%= link_to 'Edit', edit_user_path(@users.first) %>
+<br><br>
 
+
+    </div>
+    <div class="span7">
+      
+  <h3 class="text-center">
+    <div>
+      Status
+    </div>
+  </h3>
+
+<br>
 <% @status.each do |status_update| %>
   <%= status_update.content %>
   <%= link_to 'Destroy', status_update, method: :delete, data: { confirm: 'Are you sure?' } %>
-  <br>
   <hr>
 <% end %>
+<br>
+<%= link_to 'New Status update', new_status_update_path %>
+<br><br>
 
-<button class="btn btn-info" type="button">
- <br>
-  <%= link_to 'New Status update', new_status_update_path %>
- <br>
-</button>
-
-</div>
     </div>
   </div>
 </div>
-
-
-
-
-
-
-
-
-
-
-
-
