--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,3 +1,10 @@
+<div class="bottom-menu bottom-menu-inverse">
+  <div class="container">
+    <h2>MyBook</h2>
+  </div>
+</div>
+
+
 <br>
   <h1 class="text-center">
     <%= @users.first.name %>
@@ -16,9 +23,7 @@
 <br>
 
   <h3 class="text-center">
-    <div>
-      About
-    </div>
+      <div>About</div>
   </h3>
   <br>
 
@@ -71,3 +76,22 @@
 
 
 
+<div class="navbar navbar-inverse">
+  <div class="navbar-inner">
+    <div class="container">
+      <button type="button" class="btn btn-navbar" data-toggle="collapse" data-target="#nav-collapse-01"></button>
+      <a href="#" class="brand fui-flat"></a>
+
+      <div class="nav-collapse collapse" id="nav-collapse-01">
+        <ul class="nav">
+          <!-- Menu items go here -->
+          <li>
+            <ul>
+              <!-- Sub Menu items go here -->
+            </ul>
+          </li>
+        </ul>
+      </div>
+    </div>
+  </div>
+</div>
