--- a/app/assets/stylesheets/bootstrap.css
+++ b/app/assets/stylesheets/bootstrap.css
@@ -6170,14 +6170,14 @@ a.badge:focus {
 
 //----------------------------------------------------------------------------------
 
-#front-info{
-  color: #CC00FF;
-}
+//#front-info{
+  //color: #CC00FF;
+//}
 
-#front-status{
-  color: #00FF99;
-}
+//#front-status{
+  //color: #00FF99;
+//}
 
-.body-background{
-  background-color: #b6def5;
-}
+//.body-background{
+  //background-color: #b6def5;
+//}
