--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,4 +1,4 @@
-<body class="body-background">
+<body style="background-color:#edcaeb">
 
 <div class="navbar navbar-inverse">
             <div class="navbar-inner">
@@ -45,7 +45,7 @@
 <br>
 
 
-<h1><%= @users.first.name %></h1>
+<h1 style="color:#4c095b"><%= @users.first.name %></h1>
 
 <ul class="nav nav-tabs">
   <li><a href="#"></a></li>
@@ -71,7 +71,6 @@
       
 <br>
 <div class="text-center">
-
 <button class="btn btn-danger"><%= image_tag @users.first.avatar %></button>
 </div>
 <br>
